# sparta

./: .gitignore  pyproject.toml  test.sh
.github/workflows/: ci.yaml
sparta/: settings.py  urls.py
