[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["김혁진 <hyukjin720@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0"
django-ninja = "0.16.1"
black = "21.12b0"
django-stubs = "1.9.0"
mypy = "0.931"
HTTPrequest = "^0.1"
isort = "5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

# Mypy 설정
[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.9
strict = true
# strict 설정으로 argument 와 return 값에 type hint 가 제대로 되어있는지를 검사할 것임.

# overrides : mypy 로 검사하지 않을 파일들
# migrations 파일 모든 것의 에러를 무시하겠다. 즉 mypy검사를 하지 않겠다.
[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

# manage.py 파일을 mypy 검사를 무시하겠다. 수정할 일이 거의 없으므로
[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "sparta.settings"


[tool.isort]
profile = "black"